--- a/formations.html
+++ b/formations.html
@@ -10,31 +10,98 @@
 
 <body>
   <header>
-    <img src = "../img/Efrei-logo-couleur.png" alt = "Logo Efrei">
-
+    <div class="header-top">
+    <img src = "../img/Efrei-logo-couleur.png" alt = "Logo Efrei" id="efrei">
     <h3>Efrei Grande École du numérique : Formations</h3>
+
+    </div>
+
     <nav>
         <a href = "./index.html">Accueil</a>
         <a href="./formations.html">Formations</a>
         <a href="./A_propos.html">À Propos</a>
-
     </nav>
-
   </header>
 
-    <section>
-      <h2>L'efrei propose de nombreuses formations :</h2>
-      
-      <p>Depuis sa création en 1936, l'efrei a, malgré les changements de campus et de direction, gardé pour objectif de d'instruire ses élèves au travers d'un large choix de formations.</p>
-      <p>De nos jours, ces diverses formations peuvent être réparties en trois grandes catégories :</p>
 
-      <ul>
-        <li>-<a href="./pge.html">les Programmes Grande École</a> </il>
-        <li>-<a href="./pdm.html">les Programmes Technologie & Numérique</a> </li>
-        <li>-<a href="./ptn.html">les Programmes Digital & Management</a> </li>
-      </ul>
-      
-    </section>
+  <img src="../img/cti.webp" alt="parcours ingé" class="img_presentation">
+
+
+  <section class="partie">
+    <div class="noms">
+      <h2 class="nom_pr">Programme Grande École (PGE)</h2>
+      <h2 class="nom_scd"> - 5 ans</h2>
+    </div>
+
+    <p class="info1">
+      Le Programme Grande École forme des ingénieurs généralistes du numérique avec un socle scientifique
+      et technique solide, couvrant l’informatique, les systèmes embarqués, la cybersécurité et les réseaux.
+    </p>
+
+    <p class="info1">
+      La formation conduit au diplôme d’ingénieur accrédité par la CTI et reconnu en Europe. Elle inclut
+      des périodes en entreprise, des projets pratiques et souvent une mobilité internationale.
+    </p>
+
+    <p class="info1">
+      Les diplômés accèdent à des carrières variées dans les technologies du numérique, avec de fortes
+      compétences en gestion de projets et innovation.
+    </p>
+
+    <a href="./pge.html">En savoir plus sur le PGE</a>
+    <br><br>
+  </section>
+
+  <section class="partie">
+    <div class="noms">
+      <h2 class="nom_pr">Programme Digital & Management</h2>
+      <h2 class="nom_scd"> - 3 à 5 ans selon parcours</h2>
+    </div>
+
+    <p class="info1">
+      Les parcours Digital & Management combinent compétences techniques en numérique et savoir-faire
+      en gestion, marketing digital et stratégie.
+    </p>
+
+    <p class="info1">
+      Ces formations permettent d’acquérir des capacités de pilotage de projets digitaux, avec des options
+      en alternance et des liens étroits avec le marché professionnel.
+    </p>
+
+    <p class="info1">
+      Les diplômés sont préparés à des postes de chef de projet, consultant digital ou responsable
+      de solutions numériques innovantes.
+    </p>
+
+    <a href="./pdm.html">En savoir plus sur le PDM</a>
+    <br><br>
+  </section>
+
+  <section class="partie">
+    <div class="noms">
+      <h2 class="nom_pr">Programme Tech & Numérique</h2>
+      <h2 class="nom_scd"> - 3 à 5 ans selon parcours</h2>
+    </div>
+
+    <p class="info1">
+      Le Programme Tech & Numérique propose des formations spécialisées dans la cybersécurité,
+      le développement web et logiciel, le cloud et l’intelligence artificielle.
+    </p>
+
+    <p class="info1">
+      Ces cursus combinent expertise technique et compréhension des enjeux IT actuels, avec des possibilités
+      d’alternance et des partenariats avec des entreprises du secteur numérique.
+    </p>
+
+    <p class="info1">
+      Les diplômés accèdent à des carrières techniques de haut niveau, en tant qu’ingénieurs, développeurs,
+      consultants ou experts en technologies numériques.
+    </p>
+
+    <a href="./ptn.html">En savoir plus sur le PTN</a>
+    <br><br>
+  </section>
+
 
     <footer>
       <p>©️2025 Philippe BROCHIER | Léo CARLIER-BARNOUX.</p>
@@ -42,3 +109,5 @@
       <a href = "./A_propos.html">À propos</a>
     </footer>
 </body>
+
+</html>
