--- a/ressources.html
+++ b/ressources.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <img src = "../img/efrei.png" alt = "Logo Efrei" id="efrei">
+    <img src = "../img/Efrei-logo-couleur.svg" alt = "Logo Efrei" id="efrei">
 
     <h3>Efrei Grande École du numérique : Programme Experts - Tech & Numérique</h3>
     <nav>
@@ -20,8 +20,26 @@
     </header>
     <h1>Ressources numériques et physiques</h1>
     <section class="partie">
+        <h2>Pour nous trouver :</h2>
+        <h3>Sur le Campus République :</h3>
+        <p>
+            Bâtiment E – 1er étage (à côté de la salle E101) <br>
+            Horaires : Du Lundi au Vendredi 7H30/12H30 et de 13H30/18H00
+        </p>
+        <h3>Sur le Campus Bordeaux :</h3>
+        <p>
+            1er étage bureau 114 <br>
+            Horaires : Du Lundi au Jeudi 8H00/13H00, Vendredi 8h00/12h00
+        </p>
+    </section>
+    <section class="partie">
         <h2>Ressources physiques</h2>
         <h3>Le fablab de Bordeaux et l'Innovation Lab de Villejuif</h3>
+        <div class="images">
+            <img src="../img/innovationLab.png" alt="l'InnovationLab de l'EFREI Paris">
+            <img src="../img/fablab.png" alt="le FabLab de l'EFREI Bordeaux">
+        </div>
+        
         <p>
             Que ce soit en région parisienne ou à Bordeaux, les fablab et l'Ilab permettent aux étudiants de réaliser leur projet directement en physique, en leur fournissant des matériels tels que : 
         </p>
@@ -86,6 +104,7 @@
         <ul>
             <li>Accès aux services de reprographie avec la carte étudiante</li>
             <li>Salles de TP</li>
+            <li>Wifi du campus</li>
         </ul>
     </section>
     <section class="partie">
@@ -93,9 +112,14 @@
         <h3>Les software proposés par l'EFREI</h3>
         <ul>
             <li>Outils microsoft</li>
+            <img src="../img/logosMS.avif" alt="suite microsoft" height="100">
             <li>Suite Jetbrains</li>
+            <img src="../img/jetbrains.png" alt="suite jetbrains" height="100">
             <li>Moodle</li>
+            <img src="../img/moodle.png" alt="logo Moodle" height="100">
             <li>So We Sign (SWS)</li>
+            <img src="../img/sws.png" alt="Logo so we Sign" height="100">
+            <li>MyEfrei</li>
         </ul>
     </section>
 </body>
